// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateStateH can generate fixture ARRAY_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/ARRAY_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class ArrayPropsNativeComponentState {
    public:
    
    ArrayPropsNativeComponentState() = default;

    

#ifdef ANDROID
    ArrayPropsNativeComponentState(ArrayPropsNativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/ARRAY_PROPS_WITH_NESTED_OBJECT/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class ArrayPropsNativeComponentState {
    public:
    
    ArrayPropsNativeComponentState() = default;

    

#ifdef ANDROID
    ArrayPropsNativeComponentState(ArrayPropsNativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/BOOLEAN_PROP/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class BooleanPropNativeComponentState {
    public:
    
    BooleanPropNativeComponentState() = default;

    

#ifdef ANDROID
    BooleanPropNativeComponentState(BooleanPropNativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COLOR_PROP 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COLOR_PROP/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class ColorPropNativeComponentState {
    public:
    
    ColorPropNativeComponentState() = default;

    

#ifdef ANDROID
    ColorPropNativeComponentState(ColorPropNativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMMANDS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMMANDS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class CommandNativeComponentState {
    public:
    
    CommandNativeComponentState() = default;

    

#ifdef ANDROID
    CommandNativeComponentState(CommandNativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMMANDS_AND_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMMANDS_AND_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class CommandNativeComponentState {
    public:
    
    CommandNativeComponentState() = default;

    

#ifdef ANDROID
    CommandNativeComponentState(CommandNativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMPONENT_WITH_ALL_STATE_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMPONENT_WITH_ALL_STATE_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class SimpleComponentState {
    public:
    
      SimpleComponentState(
        bool disabled,
      std::string accessibilityHint,
      std::string accessibilityRole,
      int progress1,
      int progress2,
      int progress3,
      Float blurRadius,
      Float blurRadius2,
      Float blurRadius3,
      Float blurRadius4,
      Float blurRadius5,
      Float blurRadius6,
      double d_blurRadius,
      double d_blurRadius2,
      double d_blurRadius3,
      double d_blurRadius4,
      double d_blurRadius5,
      double d_blurRadius6,
      SharedColor tintColor,
      ImageSource thumbImage,
      Point startPoint,
      EdgeInsets contentInset,
      std::vector<SimpleComponentNativePrimitivesStruct> nativePrimitives,
      SimpleComponentObjectPropStruct objectProp,
      SimpleComponentAlignment alignment,
      SimpleComponentMaxInterval maxInterval
      )
      : disabled_(disabled),
      accessibilityHint_(accessibilityHint),
      accessibilityRole_(accessibilityRole),
      progress1_(progress1),
      progress2_(progress2),
      progress3_(progress3),
      blurRadius_(blurRadius),
      blurRadius2_(blurRadius2),
      blurRadius3_(blurRadius3),
      blurRadius4_(blurRadius4),
      blurRadius5_(blurRadius5),
      blurRadius6_(blurRadius6),
      d_blurRadius_(d_blurRadius),
      d_blurRadius2_(d_blurRadius2),
      d_blurRadius3_(d_blurRadius3),
      d_blurRadius4_(d_blurRadius4),
      d_blurRadius5_(d_blurRadius5),
      d_blurRadius6_(d_blurRadius6),
      tintColor_(tintColor),
      thumbImage_(thumbImage),
      startPoint_(startPoint),
      contentInset_(contentInset),
      nativePrimitives_(nativePrimitives),
      objectProp_(objectProp),
      alignment_(alignment),
      maxInterval_(maxInterval){};
    
    SimpleComponentState() = default;

    bool getDisabled() const;
    std::string getAccessibilityHint() const;
    std::string getAccessibilityRole() const;
    int getProgress1() const;
    int getProgress2() const;
    int getProgress3() const;
    Float getBlurRadius() const;
    Float getBlurRadius2() const;
    Float getBlurRadius3() const;
    Float getBlurRadius4() const;
    Float getBlurRadius5() const;
    Float getBlurRadius6() const;
    double getD_blurRadius() const;
    double getD_blurRadius2() const;
    double getD_blurRadius3() const;
    double getD_blurRadius4() const;
    double getD_blurRadius5() const;
    double getD_blurRadius6() const;
    SharedColor getTintColor() const;
    ImageSource getThumbImage() const;
    Point getStartPoint() const;
    EdgeInsets getContentInset() const;
    std::vector<SimpleComponentNativePrimitivesStruct> getNativePrimitives() const;
    SimpleComponentObjectPropStruct getObjectProp() const;
    SimpleComponentAlignment getAlignment() const;
    SimpleComponentMaxInterval getMaxInterval() const;
    

#ifdef ANDROID
    SimpleComponentState(SimpleComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
      bool disabled_{false};
      std::string accessibilityHint_{\\"\\"};
      std::string accessibilityRole_;
      int progress1_{0};
      int progress2_{-1};
      int progress3_{10};
      Float blurRadius_{0.0};
      Float blurRadius2_{0.001};
      Float blurRadius3_{2.1};
      Float blurRadius4_{0.0};
      Float blurRadius5_{1.0};
      Float blurRadius6_{0.0};
      double d_blurRadius_{0.0};
      double d_blurRadius2_{0.001};
      double d_blurRadius3_{2.1};
      double d_blurRadius4_{0.0};
      double d_blurRadius5_{1.0};
      double d_blurRadius6_{0.0};
      SharedColor tintColor_;
      ImageSource thumbImage_;
      Point startPoint_;
      EdgeInsets contentInset_;
      std::vector<SimpleComponentNativePrimitivesStruct> nativePrimitives_;
      SimpleComponentObjectPropStruct objectProp_;
      SimpleComponentAlignment alignment_{SimpleComponentAlignment::Center};
      SimpleComponentMaxInterval maxInterval_{SimpleComponentMaxInterval::MaxInterval0};
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture DOUBLE_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/DOUBLE_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class DoublePropNativeComponentState {
    public:
    
    DoublePropNativeComponentState() = default;

    

#ifdef ANDROID
    DoublePropNativeComponentState(DoublePropNativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/EVENT_NESTED_OBJECT_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class EventsNestedObjectNativeComponentState {
    public:
    
    EventsNestedObjectNativeComponentState() = default;

    

#ifdef ANDROID
    EventsNestedObjectNativeComponentState(EventsNestedObjectNativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture EVENT_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/EVENT_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class EventsNativeComponentState {
    public:
    
    EventsNativeComponentState() = default;

    

#ifdef ANDROID
    EventsNativeComponentState(EventsNativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture EVENTS_WITH_PAPER_NAME 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/EVENTS_WITH_PAPER_NAME/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture EXCLUDE_ANDROID 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/EXCLUDE_ANDROID/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class ExcludedAndroidComponentState {
    public:
    
    ExcludedAndroidComponentState() = default;

    

#ifdef ANDROID
    ExcludedAndroidComponentState(ExcludedAndroidComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture EXCLUDE_ANDROID_IOS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/EXCLUDE_ANDROID_IOS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class ExcludedAndroidIosComponentState {
    public:
    
    ExcludedAndroidIosComponentState() = default;

    

#ifdef ANDROID
    ExcludedAndroidIosComponentState(ExcludedAndroidIosComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class ExcludedIosComponentState {
    public:
    
    ExcludedIosComponentState() = default;

    

#ifdef ANDROID
    ExcludedIosComponentState(ExcludedIosComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

class MultiFileIncludedNativeComponentState {
    public:
    
    MultiFileIncludedNativeComponentState() = default;

    

#ifdef ANDROID
    MultiFileIncludedNativeComponentState(MultiFileIncludedNativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture FLOAT_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/FLOAT_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class FloatPropNativeComponentState {
    public:
    
    FloatPropNativeComponentState() = default;

    

#ifdef ANDROID
    FloatPropNativeComponentState(FloatPropNativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture IMAGE_PROP 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/IMAGE_PROP/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class ImagePropNativeComponentState {
    public:
    
    ImagePropNativeComponentState() = default;

    

#ifdef ANDROID
    ImagePropNativeComponentState(ImagePropNativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture INSETS_PROP 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/INSETS_PROP/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class InsetsPropNativeComponentState {
    public:
    
    InsetsPropNativeComponentState() = default;

    

#ifdef ANDROID
    InsetsPropNativeComponentState(InsetsPropNativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture INT32_ENUM_PROP 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/INT32_ENUM_PROP/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class Int32EnumPropsNativeComponentState {
    public:
    
    Int32EnumPropsNativeComponentState() = default;

    

#ifdef ANDROID
    Int32EnumPropsNativeComponentState(Int32EnumPropsNativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture INTEGER_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/INTEGER_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class IntegerPropNativeComponentState {
    public:
    
    IntegerPropNativeComponentState() = default;

    

#ifdef ANDROID
    IntegerPropNativeComponentState(IntegerPropNativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/INTERFACE_ONLY/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/MULTI_NATIVE_PROP/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class ImageColorPropNativeComponentState {
    public:
    
    ImageColorPropNativeComponentState() = default;

    

#ifdef ANDROID
    ImageColorPropNativeComponentState(ImageColorPropNativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture NO_PROPS_NO_EVENTS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/NO_PROPS_NO_EVENTS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class NoPropsNoEventsComponentState {
    public:
    
    NoPropsNoEventsComponentState() = default;

    

#ifdef ANDROID
    NoPropsNoEventsComponentState(NoPropsNoEventsComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture OBJECT_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/OBJECT_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class ObjectPropsState {
    public:
    
    ObjectPropsState() = default;

    

#ifdef ANDROID
    ObjectPropsState(ObjectPropsState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture POINT_PROP 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/POINT_PROP/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class PointPropNativeComponentState {
    public:
    
    PointPropNativeComponentState() = default;

    

#ifdef ANDROID
    PointPropNativeComponentState(PointPropNativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture STRING_ENUM_PROP 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/STRING_ENUM_PROP/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class StringEnumPropsNativeComponentState {
    public:
    
    StringEnumPropsNativeComponentState() = default;

    

#ifdef ANDROID
    StringEnumPropsNativeComponentState(StringEnumPropsNativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture STRING_PROP 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/STRING_PROP/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class StringPropComponentState {
    public:
    
    StringPropComponentState() = default;

    

#ifdef ANDROID
    StringPropComponentState(StringPropComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/TWO_COMPONENTS_DIFFERENT_FILES/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class MultiFile1NativeComponentState {
    public:
    
    MultiFile1NativeComponentState() = default;

    

#ifdef ANDROID
    MultiFile1NativeComponentState(MultiFile1NativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

class MultiFile2NativeComponentState {
    public:
    
    MultiFile2NativeComponentState() = default;

    

#ifdef ANDROID
    MultiFile2NativeComponentState(MultiFile2NativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/TWO_COMPONENTS_SAME_FILE/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

namespace facebook {
namespace react {

class MultiComponent1NativeComponentState {
    public:
    
    MultiComponent1NativeComponentState() = default;

    

#ifdef ANDROID
    MultiComponent1NativeComponentState(MultiComponent1NativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

class MultiComponent2NativeComponentState {
    public:
    
    MultiComponent2NativeComponentState() = default;

    

#ifdef ANDROID
    MultiComponent2NativeComponentState(MultiComponent2NativeComponentState const &previousState, folly::dynamic data){};
    folly::dynamic getDynamic() const {
      return {};
    };
    MapBuffer getMapBuffer() const {
      return MapBufferBuilder::EMPTY();
    };
#endif

    private:
    
};

} // namespace react
} // namespace facebook",
}
`;
